--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
+.flexbox {
+    display: flex;
+    border: 2px solid navy;
+    padding: 20px;
+}
 
+.item {
+    border: 2px solid rgb(98, 107, 138);
+    padding: 20px;
+}
+
+#box1 {
+    justify-content: space-evenly;
+}
