finished the layout

--- a/style.css
+++ b/style.css
@@ -1,14 +1,35 @@
 .flexbox {
     display: flex;
-    border: 2px solid navy;
+    border: 2px solid rgb(148,160,205);
     padding: 20px;
 }
 
 .item {
-    border: 2px solid rgb(98, 107, 138);
+    border: 2px solid rgb(148, 160, 205);
     padding: 20px;
+   
 }
 
 #box1 {
-    justify-content: space-evenly;
+    justify-content: center;
+    background: rgb(40, 40, 111);
+    border: 2px solid rgb(40, 40, 111);
+}
+
+#box2 {
+    justify-content: center; 
+    border: 2px solid white;
+    background: white;
+}
+
+#box3 {
+    justify-content: center;
+    border: 2px solid rgb(190,218,224);
+    background: rgb(190, 218, 224);
+}
+
+#box4 {
+    border: 2px solid white;
+    justify-content: center;
+    background: white; 
 }
